<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/hideKeyboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/checkInConstraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvActivityTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />

            <ImageView
                android:id="@+id/removeRecord"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_delete_black_24dp"
                android:tint="@color/delete"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/shareRecord"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/share"
                android:tint="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/checkInConstraint">

            <EditText
                android:id="@+id/etTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/title"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etPlace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/place"
                android:maxLines="2"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/etTitle" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/description"
                android:maxLines="5"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorPrimary"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/etPlace" />

            <Button
                android:id="@+id/btnDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_background"
                android:text="@string/add_date"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/etDescription" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/locationOuterConstraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/btnDate">

                <TextView
                    android:id="@+id/tvLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    android:text="@string/nulll"
                    app:layout_constraintBottom_toBottomOf="@id/locationConstraint"
                    app:layout_constraintEnd_toStartOf="@id/locationConstraint"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/locationConstraint" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="3dp"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintBottom_toBottomOf="@id/locationConstraint"
                    app:layout_constraintEnd_toEndOf="@id/tvLocation"
                    app:layout_constraintStart_toStartOf="@id/tvLocation" />

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/locationConstraint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/btnGetLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/my_location"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btnOpenLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/show_on_map"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.constraint.ConstraintLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/imageOuterConstraint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/locationOuterConstraint">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/showPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/ivPic"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/button_background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <android.support.constraint.ConstraintLayout
                        android:id="@+id/changePic"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/constraint_background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/ivPic">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_camera_enhance_black_24dp"
                            android:tint="@color/colorPrimaryDark"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </android.support.constraint.ConstraintLayout>

                </android.support.constraint.ConstraintLayout>

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/addNewPic"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/constraint_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/ic_camera_enhance_black_24dp"
                        android:tint="@color/colorPrimaryDark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </android.support.constraint.ConstraintLayout>

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_background"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageOuterConstraint" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>